Fix layout bugs cross Android/desktop

--- a/client/stylesheets/teleport.css
+++ b/client/stylesheets/teleport.css
@@ -1,5 +1,6 @@
 /* CSS declarations go here */
 body {
+  padding-top: 50px;
   /* To prevent click-and-drag from selecting text */
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -8,6 +9,10 @@ body {
   -ms-user-select: none;
   user-select: none;
   background: #fcfcfa;
+}
+
+.navbar-fixed-top {
+    position: absolute;
 }
 
 /* For displaying the list of robots */
@@ -35,10 +40,10 @@ body {
 .videoContainer {
   position: relative;
   overflow: hidden;
-  height: 100%;
+  height: 90%;
   width: 100%;
   max-width: 100%;
-  max-height: 100%;
+  max-height: 90%;
 }
 
 .theirVideo {
